# cmake-autotest-sample

./: .gitignore  CMakeLists.txt  README.md  pytest.ini  runtest.sh
.github/workflows/: ci.yml  opened-new-issue.yml
src/: CMakeLists.txt  main.f90
test/: .gitignore  README.md  conftest.py  ref.out  run.sh  test.sh  test1.py  test_1.py
test/test1/: test_1.py
